--- a/src/main/resources/templates/Contact_Me.html
+++ b/src/main/resources/templates/Contact_Me.html
@@ -44,7 +44,24 @@
 </section>
 <section class="contact-me">
     <div class="row">
-
+        <!--        <div class="contact-col">-->
+        <!--            <div>-->
+        <!--                <i class="fa fa-envelope-o" aria-hidden="true"></i>-->
+        <!--                <span>-->
+        <!--                <h5>javiborreguero96@gmail.com</h5>-->
+        <!--                <p>Envíe un correo electrónico con su consulta </p>-->
+        <!--            </span>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <div class="contact-col">
+            <form action="">
+                <input name="name" type="text" placeholder="Introduzca su nombre: " required>
+                <input name="email" type="email" placeholder="Introduzca su dirección de correo: " required>
+                <input name="subject" type="text" placeholder="Introduzca el asunto del correo: " required>
+                <textarea name="message" rows="8" placeholder="Mensaje: " required></textarea>
+                <button type="submit" class="btn-send-message">Enviar mensaje</button>
+            </form>
+        </div>
     </div>
 </section>
 <script src="/js/Script.js" charset="utf-8"></script>
