--- a/src/main/resources/templates/Contact_Me.html
+++ b/src/main/resources/templates/Contact_Me.html
@@ -24,10 +24,10 @@
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
-                <li><a href="/" id="start">Inicio</a></li>
-                <li><a href="/Projects" id="projects">Proyectos</a></li>
+                <li><a th:href="@{/}" id="start">Inicio</a></li>
+                <li><a th:href="@{/Projects}" id="projects">Proyectos</a></li>
                 <li><a href="#" id="cv">Currículum</a></li>
-                <li><a href="/Contact" id="contact">Contacto</a></li>
+                <li><a th:href="@{/Contact}" id="contact">Contacto</a></li>
             </ul>
         </div>
         <i class="fa fa-bars" id="bar" onclick="showMenu()"></i>
@@ -54,12 +54,13 @@
         <!--            </div>-->
         <!--        </div>-->
         <div class="contact-col">
-            <form action="">
+            <!--            action="SendEmail.php" method="post"-->
+            <form th:action="@{/sendEmail}" method="post">
                 <input name="name" type="text" placeholder="Introduzca su nombre: " required>
                 <input name="email" type="email" placeholder="Introduzca su dirección de correo: " required>
                 <input name="subject" type="text" placeholder="Introduzca el asunto del correo: " required>
                 <textarea name="message" rows="8" placeholder="Mensaje: " required></textarea>
-                <button type="submit" class="btn-send-message">Enviar mensaje</button>
+                <button href="/Contact" type="submit" class="btn-send-message">Enviar mensaje</button>
             </form>
         </div>
     </div>
