--- a/src/main/resources/templates/My_Curriculum.html
+++ b/src/main/resources/templates/My_Curriculum.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
           rel="stylesheet">
-    <link href="/style/contact_me/ContactMeStyle.css" rel="stylesheet">
+    <link href="/style/my_curriculum/MiCirruculumStyle.css" rel="stylesheet">
     <link href="/images/webIcon.ico" rel="icon">
     <title>Hazt-Ver</title>
 </head>
@@ -34,25 +34,7 @@
     </nav>
     <!-- Introducción -->
     <div class="reporting">
-        <h1>Contacta conmigo</h1>
-    </div>
-</section>
-<!-- Sección contacta conmigo -->
-<section class="location">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12135.538174685247!2d-3.717951763868716!3d40.49993606968672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422a2eb88824eb%3A0x367b792c5fb758ee!2sMirasierra-Paco%20De%20Lucia!5e0!3m2!1ses!2ses!4v1620559661772!5m2!1ses!2ses"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</section>
-<section class="contact-me">
-    <div class="row">
-        <div class="contact-col">
-            <form th:action="@{/sendEmail}" method="post">
-                <input name="name" type="text" placeholder="Introduzca su nombre: " required>
-                <input name="email" type="email" placeholder="Introduzca su dirección de correo: " required>
-                <input name="subject" type="text" placeholder="Introduzca el asunto del correo: " required>
-                <textarea name="message" rows="8" placeholder="Mensaje: " required></textarea>
-                <button href="/Contact" type="submit" class="btn-send-message">Enviar mensaje</button>
-            </form>
-        </div>
+        <h1>Mi Curriculum</h1>
     </div>
 </section>
 <script src="/js/Script.js" charset="utf-8"></script>
