--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a th:href="@{/}" id="start">Inicio</a></li>
                 <li><a th:href="@{/Projects}" id="projects">Proyectos</a></li>
-                <li><a href="#" id="cv">Currículum</a></li>
+                <li><a th:href="@{/Cv}" id="cv">Currículum</a></li>
                 <li><a th:href="@{/Contact}" id="contact">Contacto</a></li>
             </ul>
         </div>
