--- a/src/main/resources/static/style/main_screen/MainScreenStyle.css
+++ b/src/main/resources/static/style/main_screen/MainScreenStyle.css
@@ -92,6 +92,7 @@ nav img {
     text-decoration: none;
     color: white;
     border: 1px solid white;
+    border-radius: 5px;
     padding: 12px 34px;
     font-size: 15px;
     background: transparent;
