--- a/src/main/resources/templates/My_Curriculum.html
+++ b/src/main/resources/templates/My_Curriculum.html
@@ -37,6 +37,15 @@
         <h1>Mi Curriculum</h1>
     </div>
 </section>
+<section class="cv">
+    <div class="cv-row">
+        <div class="cv-col" id="cv-image">
+        </div>
+        <div class="middle">
+            <div class="text">Descargar</div>
+        </div>
+    </div>
+</section>
 <script src="/js/Script.js" charset="utf-8"></script>
 </body>
 </html>
