--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -35,20 +35,19 @@
 </section>
 <!-- Sección para los diferentes proyectos -->
 <section class="projects">
-    <h1>Mis mejores proyectos</h1>
-    <div class="my-projects-row">
-        <div class="my-projects-col" id="first-project-image"></div>
-        <div class="my-projects-" id="first-project-description">
-            <h3>Chat y Hundir la flota</h3>
-            <p id="battleShip">Java - Programación multihilo</p>
-            <p>
-                What is Lorem Ipsum?
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <h1>Mi trayectoria</h1>
+    <!-- Experiencia laboral -->
+    <div class="experience">
+        <div class="work-experience" id="first-work-experience">
+        </div>
+        <div class="work-experience" id="first-work-experience-description">
+            <h3>Paradigma Digital</h3>
+            <p id="contract">Desarrollador de Software - Contrato en Prácticas</p>
+            <p>Primera experiencia laboral como desarrollador. Durante esta etapa estoy conociendo el día a día de una
+                consultora dedicada al desarrollo. Está siendo una etapa emocionante en la que estoy aprendiendo la
+                dinámica de trabajo y familiarizándome con nuevas tecnologías, pero sobre todo, me está permitiendo
+                aprender nuevas herramientas y metódicas de desarrollo potenciando los conocimientos aprendidos en el
+                aula.</p>
         </div>
     </div>
 </section>
