--- a/src/main/resources/static/style/projects/MyProjectsStyle.css
+++ b/src/main/resources/static/style/projects/MyProjectsStyle.css
@@ -93,46 +93,46 @@ nav .fa {
     padding: 10px;
 }
 
-.my-projects-row {
+.experience {
     position: absolute;
     left: 35%;
     width: max-content;
     margin-bottom: 10px;
+    padding-top: 20px;
 }
 
-.my-projects-col {
+.work-experience {
     box-sizing: border-box;
     float: left;
     width: 200px;
     padding: 10px;
     height: 200px;
     margin-bottom: 10px;
+    border-radius: 10px;
 }
 
-#first-project-description {
+#first-work-experience-description {
     width: 500px;
-    margin-bottom: 10px;
 }
 
-#battleShip {
+#contract {
     font-weight: bold;
     display: inline-block;
 }
 
-#first-project-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../images/imagenJavier.jpg");
+#first-work-experience {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../images/paradigma.jpg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: right;
     margin-top: 15px;
 }
 
-.my-projects-row:after {
+.experience:after {
     content: "";
     display: table;
     clear: both;
 }
-
 /* ------------------ */
 /* ---Responsive--- */
 @media (max-width: 600px) {
@@ -189,6 +189,12 @@ nav .fa {
 
     .nav-links ul {
         padding: 30px;
+    }
+    .projects {
+        padding-top: 300px;
+    }
+    .work-experience {
+        width: 100%;
     }
 }
 
