--- a/src/main/resources/templates/My_Curriculum.html
+++ b/src/main/resources/templates/My_Curriculum.html
@@ -39,6 +39,7 @@
 </section>
 <section class="cv">
     <div class="cv-row">
+        <h1>Ver y descargar mi Currículum</h1>
         <a th:href="@{/pdf/curriculum.pdf}" download="CV_Javier_Borreguero.pdf">
             <div class="cv-col" id="cv-image">
             </div>
@@ -46,6 +47,17 @@
                 <div class="text">Descargar</div>
             </div>
         </a>
+    </div>
+</section>
+<section class="footer">
+    <h4>Javier Borreguero</h4>
+    <p>Desarrollador software</p>
+    <div class="icons">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+        <i class="fa fa-github" aria-hidden="true"></i>
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
     </div>
 </section>
 <script src="/js/Script.js" charset="utf-8"></script>
