--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -33,22 +33,42 @@
         <i class="fa fa-bars" id="bar" onclick="showMenu()"></i>
     </nav>
 </section>
-<!-- Sección para los diferentes proyectos -->
 <section class="projects">
     <h1>Mi trayectoria</h1>
-    <!-- Experiencia laboral -->
-    <div class="experience">
-        <div class="work-experience" id="first-work-experience">
+    <div class="battleShip">
+        <div class="battleShip-col" id="battleShip-image">
         </div>
-        <div class="work-experience" id="first-work-experience-description">
-            <h3>Paradigma Digital</h3>
-            <p id="contract">Desarrollador de Software - Contrato en Prácticas</p>
-            <p>Primera experiencia laboral como desarrollador. Durante esta etapa estoy conociendo el día a día de una
-                consultora dedicada al desarrollo. Está siendo una etapa emocionante en la que estoy aprendiendo la
-                dinámica de trabajo y familiarizándome con nuevas tecnologías, pero sobre todo, me está permitiendo
-                aprender nuevas herramientas y metódicas de desarrollo potenciando los conocimientos aprendidos en el
-                aula.</p>
+        <div class="battleShip-col" id="battleShip-description">
+            <h3>Hundir la flota</h3>
+            <p id="contract">Java - Sockets</p>
+            <p>El clásico juego de la batalla naval. Al comenzar cada juagador distrbibuye sus barcos a lo largo de su
+                tablero. Con todos los barcos bien colocados, comienza una serie de rondas en las que cada jugador debe
+                derribar todos los barcos de su contrincante. Gana el primer en destruir toda la flota rival.
+                Este proyecto está desarrollado con socket stream (TCP), que es un protocolo orientado a conexión, que
+                permite la comunicación entre los distintos jugadores de manera continua.</p>
         </div>
+    </div>
+    <div class="chat">
+        <div class="chat-col" id="chat-image">
+        </div>
+        <div class="chat-col" id="chat-description">
+            <h3>Chat</h3>
+            <p id="contractChat">Java - Sockets</p>
+            <p>En esta ocasión traigo un chat. En el que dos jugadores intercambian diferentes mensajes.
+                Desarrollado con socket datagram (UDP), sevicios de transporte de información sin conexión.</p>
+        </div>
+    </div>
+    <div class="aux"></div>
+</section>
+<section class="footer">
+    <h4>Javier Borreguero</h4>
+    <p>Desarrollador software</p>
+    <div class="icons">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+        <i class="fa fa-github" aria-hidden="true"></i>
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
     </div>
 </section>
 <script src="/js/Script.js" charset="utf-8"></script>
