--- a/src/main/resources/static/style/contact_me/ContactMeStyle.css
+++ b/src/main/resources/static/style/contact_me/ContactMeStyle.css
@@ -142,6 +142,23 @@ nav .fa {
     color: black;
     transition: 1s;
 }
+
+/* --- Footer ---*/
+.footer{
+    padding-top: 100px;
+    padding-bottom: 20px;
+    width: 100%;
+    text-align: center;
+}
+.footer h4{
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.icons .fa{
+    margin: 0px 13px;
+    cursor: pointer;
+    padding: 10px 0px;
+}
 /* ------------------ */
 /* ---Responsive--- */
 @media (max-width: 600px) {
