--- a/src/main/resources/templates/Contact_Me.html
+++ b/src/main/resources/templates/Contact_Me.html
@@ -55,6 +55,17 @@
         </div>
     </div>
 </section>
+<section class="footer">
+    <h4>Javier Borreguero</h4>
+    <p>Desarrollador software</p>
+    <div class="icons">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+        <i class="fa fa-github" aria-hidden="true"></i>
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+    </div>
+</section>
 <script src="/js/Script.js" charset="utf-8"></script>
 </body>
 </html>
