--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -51,15 +51,16 @@
         </div>
     </div>
 </section>
-<!-- Sección mi trayectoria-->
-<section class="trajectory">
+<section class="experienceTrajectory">
     <h1>Mi trayectoria</h1>
     <!-- Experiencia laboral -->
     <div class="experience">
         <div class="work-experience" id="first-work-experience">
         </div>
         <div class="work-experience" id="first-work-experience-description">
-            <h3>Paradigma Digital</h3>
+            <a style="color: black" th:href="@{https://www.paradigmadigital.com/}">
+                <h3>Paradigma Digital</h3>
+            </a>
             <p id="contract">Desarrollador de Software - Contrato en Prácticas</p>
             <p>Primera experiencia laboral como desarrollador. Durante esta etapa estoy conociendo el día a día de una
                 consultora dedicada al desarrollo. Está siendo una etapa emocionante en la que estoy aprendiendo la
@@ -68,12 +69,17 @@
                 aula.</p>
         </div>
     </div>
+</section>
+<!-- Sección mi trayectoria-->
+<section class="studiesTrajectory">
     <!-- Educación -->
     <div class="studies">
         <div class="studies-experience" id="my-studies-experience">
         </div>
         <div class="studies-experience" id="my-studies-experience-description">
-            <h3>U-tad</h3>
+            <a style="color: black" th:href="@{https://u-tad.com}">
+                <h3>U-tad</h3>
+            </a>
             <p id="u-tad-full-name">Centro Universitario de Tecnología y Arte Digital </p>
             <p>U-tad es una univeridad puntera en el sector de la tecnología. Cuenta con profesores que además de
                 impartir sus clases en la univerdidad, son empleados en diferentes empresas privada. Brindando la
@@ -86,11 +92,21 @@
     <h4>Javier Borreguero</h4>
     <p>Desarrollador software</p>
     <div class="icons">
-        <i class="fa fa-linkedin" aria-hidden="true"></i>
-        <i class="fa fa-github" aria-hidden="true"></i>
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <a style="color: black" th:href="@{https://www.linkedin.com/in/javier-borreguero/}">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://github.com/javierborreguero}">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://www.facebook.com/javier.borreguero.792/}">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://twitter.com/Javier_BdelPozo}">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://www.instagram.com/javiborreguero96/}">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
     </div>
 </section>
 <script src="/js/Script.js" charset="utf-8"></script>
