--- a/src/main/resources/templates/My_Curriculum.html
+++ b/src/main/resources/templates/My_Curriculum.html
@@ -53,11 +53,21 @@
     <h4>Javier Borreguero</h4>
     <p>Desarrollador software</p>
     <div class="icons">
-        <i class="fa fa-linkedin" aria-hidden="true"></i>
-        <i class="fa fa-github" aria-hidden="true"></i>
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <a style="color: black" th:href="@{https://www.linkedin.com/in/javier-borreguero/}">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://github.com/javierborreguero}">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://www.facebook.com/javier.borreguero.792/}">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://twitter.com/Javier_BdelPozo}">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://www.instagram.com/javiborreguero96/}">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
     </div>
 </section>
 <script src="/js/Script.js" charset="utf-8"></script>
