--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -33,7 +33,7 @@
         <i class="fa fa-bars" id="bar" onclick="showMenu()"></i>
     </nav>
 </section>
-<section class="projects">
+<section class="battleShipProject">
     <h1>Mi trayectoria</h1>
     <div class="battleShip">
         <div class="battleShip-col" id="battleShip-image">
@@ -48,6 +48,8 @@
                 permite la comunicación entre los distintos jugadores de manera continua.</p>
         </div>
     </div>
+</section>
+<section class="chatProject">
     <div class="chat">
         <div class="chat-col" id="chat-image">
         </div>
@@ -64,11 +66,21 @@
     <h4>Javier Borreguero</h4>
     <p>Desarrollador software</p>
     <div class="icons">
-        <i class="fa fa-linkedin" aria-hidden="true"></i>
-        <i class="fa fa-github" aria-hidden="true"></i>
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <a style="color: black" th:href="@{https://www.linkedin.com/in/javier-borreguero/}">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://github.com/javierborreguero}">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://www.facebook.com/javier.borreguero.792/}">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://twitter.com/Javier_BdelPozo}">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </a>
+        <a style="color: black" th:href="@{https://www.instagram.com/javiborreguero96/}">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
     </div>
 </section>
 <script src="/js/Script.js" charset="utf-8"></script>
