--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -34,14 +34,16 @@
     </nav>
 </section>
 <section class="battleShipProject">
-    <h1>Mi trayectoria</h1>
+    <h1>Mis proyectos</h1>
     <div class="battleShip">
         <div class="battleShip-col" id="battleShip-image">
         </div>
         <div class="battleShip-col" id="battleShip-description">
-            <h3>Hundir la flota</h3>
+            <a style="color: black" th:href="@{https://github.com/javierborreguero/Chat_Hundir_La_Flota_Sockets}">
+                <h3>Hundir la flota</h3>
+            </a>
             <p id="contract">Java - Sockets</p>
-            <p>El clásico juego de la batalla naval. Al comenzar cada juagador distrbibuye sus barcos a lo largo de su
+            <p>El clásico juego de la batalla naval. Al comenzar cada jugador distribibuye sus barcos a lo largo de su
                 tablero. Con todos los barcos bien colocados, comienza una serie de rondas en las que cada jugador debe
                 derribar todos los barcos de su contrincante. Gana el primer en destruir toda la flota rival.
                 Este proyecto está desarrollado con socket stream (TCP), que es un protocolo orientado a conexión, que
@@ -54,13 +56,47 @@
         <div class="chat-col" id="chat-image">
         </div>
         <div class="chat-col" id="chat-description">
-            <h3>Chat</h3>
+            <a style="color: black" th:href="@{https://github.com/javierborreguero/Chat_Hundir_La_Flota_Sockets}">
+                <h3>Chat</h3>
+            </a>
             <p id="contractChat">Java - Sockets</p>
-            <p>En esta ocasión traigo un chat. En el que dos jugadores intercambian diferentes mensajes.
+            <p>En esta ocasión traigo un chat. En el que dos usuarios intercambian diferentes mensajes.
                 Desarrollado con socket datagram (UDP), sevicios de transporte de información sin conexión.</p>
         </div>
     </div>
-    <div class="aux"></div>
+</section>
+<section class="flightProject">
+    <div class="flightController">
+        <div class="flightController-col" id="flightController-image">
+        </div>
+        <div class="flightController-col" id="flightController-description">
+            <a style="color: black" th:href="@{https://github.com/javierborreguero/Gestor_Vuelos}">
+                <h3>Gestor de vuelos</h3>
+            </a>
+            <p id="flightContract">Html - JavaScript - PHP </p>
+            <p>Adentrate en el mundo de las aerolíneas. Con esta aplicación, podrás convertirte en un controlador aéreo
+                y controlar todos los vuelos de una aerolínea, gestionar la compra de billeteset et.
+                Con este Gestor de vuelos, aprenderás a desarrollarte en el mundo del fron-end y del back.
+                Desarrollado con Html, Css, JavaScript y PHP.</p>
+        </div>
+    </div>
+</section>
+<section class="weatherProject">
+    <div class="weather">
+        <div class="weather-col" id="weather-image">
+        </div>
+        <div class="weather-col" id="weather-description">
+            <a style="color: black" th:href="@{https://github.com/javierborreguero/Kotlin_WeatherApp}">
+                <h3>App Clima</h3>
+            </a>
+            <p id="weatherContract">Kotlin - SQLite - Volley - Coroutines </p>
+            <p>Accede a tu ciudad y consulta su información metereológica. Con App Clima ya no te pillará desprevenido
+                si llueve o hace frío. Ya que sabrás la temperatura antes de salir de casa.
+                Si eres nuevo en la programación para dispositivos Android y quieres aprender el control de usuario
+                mediante persistencia, como acceder a un servicio de internet o a un API, aprenderás a hacerlo mediante
+                "Volley". También usarás SQLite como base de datos para almacenar toda la información.</p>
+        </div>
+    </div>
 </section>
 <section class="footer">
     <h4>Javier Borreguero</h4>
