--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -32,6 +32,11 @@
         </div>
         <i class="fa fa-bars" id="bar" onclick="showMenu()"></i>
     </nav>
+    <div class="reporting">
+        <h1>Proyectos</h1>
+        <p>Conoce mis mejores proyectos</p>
+        <a th:href="@{#chat-description}" class="learn-more">Ver proyectos</a>
+    </div>
 </section>
 <section class="battleShipProject">
     <h1>Mis proyectos</h1>
