--- a/src/main/resources/static/style/my_curriculum/MiCirruculumStyle.css
+++ b/src/main/resources/static/style/my_curriculum/MiCirruculumStyle.css
@@ -37,6 +37,27 @@
     color: white;
 }
 
+.learn-more {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 12px 34px;
+    font-size: 15px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+/* Al pasar el ratón por encima, el botón se rellena de color*/
+.learn-more:hover {
+    border: 1px solid white;
+    background: darkgrey;
+    color: black;
+    transition: 1s;
+}
+
 /* Curriculum*/
 /* ----------------------------------- */
 /* Top nav bar y menú de opciones*/
@@ -176,17 +197,19 @@ nav .fa {
 }
 
 /* --- Footer ---*/
-.footer{
+.footer {
     padding-top: 950px;
     padding-bottom: 20px;
     width: 100%;
     text-align: center;
 }
-.footer h4{
+
+.footer h4 {
     margin-bottom: 10px;
     margin-top: 10px;
 }
-.icons .fa{
+
+.icons .fa {
     margin: 0px 13px;
     cursor: pointer;
     padding: 10px 0px;
