--- a/src/main/resources/templates/My_Curriculum.html
+++ b/src/main/resources/templates/My_Curriculum.html
@@ -35,6 +35,8 @@
     <!-- Introducción -->
     <div class="reporting">
         <h1>Mi Curriculum</h1>
+        <p>Podrás ver y descargar mi curriculum</p>
+        <a th:href="@{#cv-image}" class="learn-more">Ver currículum</a>
     </div>
 </section>
 <section class="cv">
